--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Intermodulation calculator</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="CreateStation.css" />
     <link rel="stylesheet" href="App.css" />
